--- a/style.css
+++ b/style.css
@@ -101,35 +101,34 @@ iframe {
   appearance: none;
   -webkit-appearance: none;
   -moz-appearance: none;
-  width: 38vh;
-  height: 38vh;
-  margin: 0;
+  width: 75vh;
+  height: 17vh;
+  margin: 2vh 12.5vh 0 12.5vh;
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
   background: none;
   border: none;
-  border-radius: 100%;
-  transition: 125ms ease-in;
+  border-radius: 50vh 50vh 5vh 5vh;
+  transition: 750ms ease-in;
   cursor: pointer;
   z-index: 42;
 }
 
 .back-active {
-  padding-right: 48%;
-  font-size: 28.5vh;
-  line-height: 28.5vh;
-  text-align: right;
+  padding-right: 25vh;
+  font-size: 9.5vh;
+  line-height: 9.5vh;
+  text-align: center;
   color: rgba(255,235,205,0.3);
-  text-shadow: 0 0 1vh rgba(255,235,205,1);
-  box-shadow: 0 0 5.5vh rgba(222,184,135,0.1) inset;
+  text-shadow: 0 0 1vh rgba(222,184,135,1);
 }
 
 .back-inactive {
-  padding-left: 2.5vh;
+  padding-right: 3.5vh;
   font-size: 9.5vh;
   line-height: 9.5vh;
-  text-align: left;
-  color: rgba(222,184,135,0.05);
+  text-align: center;
+  color: rgba(222,184,135,0.5);
   text-shadow: 0 0 2vh rgba(222,184,135,0.5);
-  box-shadow: 0 0 5.5vh rgba(222,184,135,0.03) inset;
 }
 
 #login-screen {
@@ -250,7 +249,7 @@ iframe {
   border-radius: 15vh;
   font-size: 7.5vh;
   font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-  color: burlywood;
+  color: rgba(222,184,135,0.5);
   text-shadow: 0 0 0.75vh burlywood;
   text-transform: uppercase;
   box-shadow: 0 0 10vh rgba(222,184,135,0.05) inset;
@@ -263,7 +262,7 @@ iframe {
 #login-two:focus,
 #you:focus {
   border-left: 0.75vh solid rgba(255, 235, 205, 0.3);
-  color: rgba(255,235,205,0.7);
+  color: rgba(255,235,205,0.5);
   box-shadow: 0 0 10vh rgba(222,184,135,0.1) inset;
   -webkit-box-shadow: 0 0 10vh rgba(222,184,135,0.1) inset;
   -moz-box-shadow: 0 0 10vh rgba(222,184,135,0.1) inset;
@@ -505,6 +504,10 @@ iframe {
   background-color: #222222;
 }
 
+.back-sphere-active {
+  background-color: rgba(17,17,17,1);
+}
+
 .blink {
   background-color: #111111;
   border-color: #222222;
@@ -596,23 +599,24 @@ iframe {
   }
   
   #back {
-    width: 38vw;
-    height: 38vw;
+    width: 75vw;
+    height: 17vw;
+    margin: 2vw 12.5vw 0 12.5vw;
+    border-radius: 50vw 50vw 5vw 5vw;
   }
   
   .back-active {
-    font-size: 28.5vw;
-    line-height: 28.5vw;
-    text-shadow: 0 0 1vw rgba(255,235,205,1);
-    box-shadow: 0 0 5.5vw rgba(222,184,135,0.1) inset;
+    padding-right: 25vw;
+    font-size: 9.5vw;
+    line-height: 9.5vw;
+    text-shadow: 0 0 1vw rgba(222,184,135,1);
   }
   
   .back-inactive {
-    padding-left: 2.5vw;
+    padding-right: 3.5vw;
     font-size: 9.5vw;
-    line-height: 9.5vw; 
+    line-height: 9.5vw;
     text-shadow: 0 0 2vw rgba(222,184,135,0.5);
-    box-shadow: 0 0 5.5vw rgba(222,184,135,0.03) inset;
   }
 
   #login-screen {
@@ -670,7 +674,7 @@ iframe {
     border-left: 5vw solid rgba(222, 184, 135, 0.1);
     border-radius: 15vw;
     font-size: 7.5vw;
-    text-shadow: 0 0 0.75vw burlywood;
+    text-shadow: 0 0 0.75vh burlywood;
     box-shadow: 0 0 10vw rgba(222,184,135,0.05) inset;
     -webkit-box-shadow: 0 0 10vw rgba(222,184,135,0.05) inset;
     -moz-box-shadow: 0 0 10vw rgba(222,184,135,0.05) inset;
