--- a/style.css
+++ b/style.css
@@ -111,7 +111,7 @@ iframe {
   background: none;
   border: none;
   border-radius: 50vh 50vh 5vh 5vh;
-  transition: 125ms ease-in;
+  transition: none;
   cursor: pointer;
   z-index: 42;
 }
