--- a/style.css
+++ b/style.css
@@ -74,7 +74,7 @@ iframe {
   background-image: none;
   text-align: center;
   grid-template-columns: repeat(3, 1fr);
-  transition: background-image 500s;
+  transition: bakckground-image 500ms;
 }
 
 #homescreen,
@@ -87,7 +87,6 @@ iframe {
   margin: -47.5vh 0 0 -47.5vh;
   grid-template-rows: repeat(4, 1fr);
   border-radius: 50vh;
-  transition: 1000ms;
 }
 
 #homescreen {
@@ -95,19 +94,19 @@ iframe {
   box-shadow: 0 0 2vh rgba(222,184,135,0.7) inset;
   -webkit-box-shadow: 0 0 2vh rgba(222,184,135,0.7) inset;
   -moz-box-shadow: 0 0 2vh rgba(222,184,135,0.7) inset;
+  transition: 875ms;
 }
 
 #back {
   appearance: none;
   -webkit-appearance: none;
   -moz-appearance: none;
-  width: 75vh;
-  height: 17vh;
-  margin: 2vh 12.5vh 0 12.5vh;
+  width: 65vh;
+  height: 17.5vh;
+  margin: 2vh 12.5vh 0 17.5vh;
   font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
   font-size: 7.5vh;
   line-height: 7.5vh;
-  text-align: center;
   background: none;
   border: none;
   border-radius: 50vh 50vh 5vh 5vh;
@@ -117,12 +116,13 @@ iframe {
 }
 
 .back-active {
-  padding-right: 25vh;
+  text-align: left;
   color: rgba(255,235,205,0.3);
   text-shadow: 0 0 1vh rgba(222,184,135,1);
 }
 
 .back-inactive {
+  text-align: center;
   color: rgba(222,184,135,0.5);
   text-shadow: 0 0 2vh rgba(222,184,135,0.5);
 }
@@ -131,6 +131,7 @@ iframe {
   box-shadow: -4vh 8vh 10vh rgba(255,235,205,0.3) inset;
   -webkit-box-shadow: -4vh 8vh 10vh rgba(255,235,205,0.3) inset;
   -moz-box-shadow: -4vh 8vh 10vh rgba(255,235,205,0.3) inset;
+  transition: 250ms;
 }
 
 #logo {
@@ -597,9 +598,9 @@ iframe {
   }
   
   #back {
-    width: 75vw;
-    height: 17vw;
-    margin: 2vw 12.5vw 0 12.5vw;
+    width: 65vw;
+    height: 17.5vw;
+    margin: 2vw 12.5vw 0 17.5vw;
     font-size: 7.5vw;
     line-height: 7.5vw;
     border-radius: 50vw 50vw 5vw 5vw;
