--- a/style.css
+++ b/style.css
@@ -117,6 +117,7 @@ iframe {
 
 .back-active {
   text-align: left;
+  padding-left: 4vh;
   color: rgba(255,235,205,0.3);
   text-shadow: 0 0 1vh rgba(222,184,135,1);
 }
@@ -607,7 +608,7 @@ iframe {
   }
   
   .back-active {
-    padding-right: 25vw;
+    padding-left: 4vh;
     text-shadow: 0 0 1vw rgba(222,184,135,1);
   }
   
